# logsqlite

./: Cargo.toml  Dockerfile  README.md  build.rs  build_plugin.sh  conf.ini  logsqlite.service
plugin/: config.json
src/: cleaner.rs  config.rs  docker.rs  entry.proto  logger.rs  main.rs  statehandler.rs
src/protobuf_stream/: protobuf_format.rs
