[package]
name = "logsqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version= "0.6.20", features= ["macros"]}
futures = "0.3.28"
serde_json = "1.0.105"
serde = {version = "1.0.183", features = ["derive"]}
hyperlocal = "0.8"
hyper = "0.14.27"
tokio = {version = "1.29.1", features = ["fs", "io-util", "rt-multi-thread", "macros", "time", "sync"] }
rusqlite = "0.29.0"
chrono = "0.4.26"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
prost = { version= "0.11" }
http = "0.2"
log = "0.4"
simple_logger = "4.2"
configparser = "3.0"

[build-dependencies]
prost-build = "0.5"

[profile.release]
lto=true
strip=true